# cf-orcd-rental

./: .gitignore  README.md  example_local_settings.py  example_plugin_config.yaml  hatch_build.py  pyproject.toml  user_search_pretty.json  user_search_raw.json
.github/workflows/: test.yml  update-version-footer.yml  user-management-tests.yml
01_1_multiusers/: all_users.json  all_users_pretty.json  api_tokens.json  api_tokens.tsv  api_tokens_pretty.json
coldfront_orcd_direct_charge/: VERSION_FOOTER.md  __init__.py  admin.py  apps.py  config.py  forms.py  models.py  signals.py  urls.py  views.py
coldfront_orcd_direct_charge/api/: serializers.py  urls.py  views.py
coldfront_orcd_direct_charge/backup/: README.md  __init__.py  base.py  config_exporter.py  config_importer.py  config_manifest.py  manifest.py  registry.py  utils.py  version.py
coldfront_orcd_direct_charge/fixtures/: cpu_node_instances.json  gpu_node_instances.json  node_resource_types.json  node_types.json
coldfront_orcd_direct_charge/help_and_notices_text/: maintenance_window.md
coldfront_orcd_direct_charge/management/: README.md
coldfront_orcd_direct_charge/migrations/: 0001_initial.py  0002_rename_cpu_node_labels.py  0003_reservation.py  (+29 more)
developer_docs/: CHANGELOG.md  CODE_ORGANIZATION.md  NODE_TYPE_PLUGIN_INSTALL_ISSUE.md  RATE_MANAGER.md  README.md  RUNTIME_CONFIG.md  VERSION_TAG_DOC.md  api-reference.md  backup_restore.md  data-models.md  exporter_importer_reference.md  maintenance-windows.md  signals.md  views-urls.md
helper_programs/: README.md
tests/: README.md  run_all_tests.sh
(+226 files in other folders)
